# xianyu-cli

./: .gitignore  .ruff.toml  README.md  pyproject.toml  xianyu_login_daemon.py  闲鱼agent.md
golang/: README.md  go.mod  go.sum  main.go
golang/cmd/: agent.go  auth.go  export.go  item.go  message.go  order.go  personal.go  root.go  search.go
golang/core/: agent_test.go  api_client.go  api_client_test.go  auth_manager.go  crypto.go  daemon_login.go  llm.go  llm_test.go  session.go  setsid_unix.go  setsid_windows.go  share.go  share_test.go  sign.go  sign_test.go  ws_client.go
golang/models/: envelope.go  envelope_test.go  item.go  item_test.go  message.go  user.go
golang/utils/: anti_detect.go  common.go  config.go  cookie.go  credential.go  credential_test.go  display.go  url.go  url_test.go
src/xianyu_cli/: __init__.py  __main__.py  cli.py
src/xianyu_cli/commands/: agent.py  auth.py  item.py  message.py  order.py  personal.py  search.py
src/xianyu_cli/core/: api_client.py  auth_manager.py  crypto.py  llm.py  session.py  share.py  sign.py  ws_client.py
src/xianyu_cli/models/: envelope.py  item.py  message.py  user.py
src/xianyu_cli/utils/: _common.py  anti_detect.py  config.py  cookie.py  credential.py  display.py  url.py
tests/: conftest.py  test_agent.py  test_agent_flow.py  test_api_client.py  test_auth.py  test_envelope.py  test_llm.py  test_search.py  test_share.py  test_sign.py  test_url.py
