[project]
name = "xianyu-cli"
version = "0.1.0"
description = "Command-line interface for Goofish (闲鱼) - 二手交易平台 CLI 工具"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["xianyu", "goofish", "cli", "闲鱼", "二手"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "httpx>=0.27",
    "websockets>=12.0",
    "msgpack>=1.0",
    "browser-cookie3>=0.19",
    "qrcode>=8.0",
    "PyYAML>=6.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
stealth = ["camoufox>=0.4"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[project.scripts]
xianyu = "xianyu_cli.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/xianyu_cli"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
